--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,12 @@
 --- 
 abstract: Check/install the dependencies for File::Remove::trash
-author: Adam Kennedy <adamk@cpan.org>
+author: 
+  - Adam Kennedy <adamk@cpan.org>
 build_requires: 
   File::Spec: 0.80
   Test::More: 0.42
 distribution_type: module
-generated_by: Module::Install version 0.67
+generated_by: Module::Install version 0.68
 license: perl
 meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
@@ -18,4 +19,4 @@ no_index:
 requires: 
   File::Remove: 0.36
   perl: 5.005
-version: 1.00
+version: 1.01
